# robot

./: .gitignore  .gitmodules  README.md  test.py
examples/: example_1.py  path.py  trajectory.py
src/r6bot_bringup/: CMakeLists.txt  package.xml
src/r6bot_bringup/config/: r6bot_controller.yaml
src/r6bot_bringup/launch/: r6bot_controller.launch.py  send_trajectory.launch.py
src/r6bot_controller/: CMakeLists.txt  package.xml  r6bot_controller.xml
src/r6bot_controller/include/r6bot_controller/: r6bot_controller.hpp
src/r6bot_controller/src/: r6bot_controller.cpp
src/r6bot_description/: CMakeLists.txt  package.xml
src/r6bot_description/assets/: 6804.part  6804.stl  6805.stl  base.part  bottom__2.part  crank_gear.stl  encoder_mount.stl  gear.part  gear__2.part  gear__2.stl  hex_shaft_hub.part  hex_shaft_hub.stl  locking_ring.stl  nema_23_adapter_plate.stl  part_1.part  part_1.stl  part_1__2.part  part_1__2.stl  part_1__3.stl  pipe_ellbow___nema_17.part  pipe_ellbow___nema_17.stl  pipe_ellbow___nema_23.part  spacer.part  thrust_bearing_plate.part  thrust_bearing_plate.stl  thrust_bearing_plate__2.part  thrust_bearing_plate__2.stl  tool_dummy.part  top__2.stl  top_ring.part  top_ring.stl  top_ring__2.stl  wedge.stl
src/r6bot_description/launch/: view_r6bot.launch.py
src/r6bot_description/meshes/: link_2_visual.stl  link_3_collision.stl  link_4_collision.stl  link_7_collision.stl
src/r6bot_description/onshape-to-robot/: build.py  config.json  ros2_control.xml
src/r6bot_description/onshape_model/: build.py  config.json  r6bot.urdf
src/r6bot_description/rviz/: view_robot.rviz
src/r6bot_description/urdf/: r6bot.urdf  robot.urdf
src/r6bot_hardware/: CMakeLists.txt  package.xml  r6bot_hardware.xml
src/r6bot_hardware/include/r6bot_hardware/: r6bot_hardware.hpp
src/r6bot_hardware/src/: r6bot_hardware.cpp
src/r6bot_reference_generator/: CMakeLists.txt  package.xml  send_trajectory.cpp
src/robot_api/: package.xml  setup.py
src/robot_api/robot_api/: __init__.py  config.py  kinematics.py  numeric_kinematics.py  robot_api.py  symbolic_kinematics.py  utills.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: robot_controllers.yaml
src/robot_bringup/launch/: robot_controllers.launch.py  robot_full.launch.py  rviz.launch.py
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: robot.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: view_r6bot.launch.py
src/robot_description/onshape-to-robot/: build.py  config.json  onshape_to_robot_monkeypatch.py  ros2_control.xml
src/robot_description/rviz/: view_robot.rviz
src/robot_description/urdf/: robot.urdf
src/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
src/robot_hardware/src/: robot_hardware.cpp
src/robot_kinematics/: package.xml  setup.py
src/robot_kinematics/robot_kinematics/: __init__.py  robot_kinematics.py  robot_kinematics_node.py  symbolic_kinematics.py  utills.py  workspace.ipynb
src/robot_kinematics_interfaces/: CMakeLists.txt  package.xml
src/robot_motion/: package.xml  setup.py
src/robot_motion_interfaces/: CMakeLists.txt  package.xml
src/robot_sdk/: package.xml  setup.cfg  setup.py
(+60 files in other folders)
